Prisma Cloud and User creation with Posts, JWT toke, Login feature

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/manjunath-hk-we45/hackernews-node#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "graphql-yoga": "^1.17.4",
+    "jsonwebtoken": "^8.5.0",
     "prisma": "^1.28.0",
     "prisma-cli": "^1.0.9",
     "prisma-client-lib": "^1.28.0"
